--- a/blocks/form/components/modal/modal.css
+++ b/blocks/form/components/modal/modal.css
@@ -48,6 +48,10 @@ body.modal-open {
   padding-right: 30px;
 }
 
+.modal .icon-close:focus {
+  outline: 2px solid;
+}
+
 .modal dialog .section {
   padding: 0;
 }
